# graduate_assessment

./: .dockerignore  .gitignore  Dockerfile  README.md  makefile
.github/workflows/: cicd.yml
flask_app/: .env.deployment  .env.local  app.py  pyproject.toml
k8s/: deployment.yaml  jenkins_values.yaml  postgres_exporter.yaml  values_prometheus.yaml
monitoring/: moniter.sh  prometheus_query.py
